# 270191U025-Software-Architecture-assignment-template

./: CMakeLists.txt  README.md  autograde.py
include/: queue.hpp  queue_array.hpp  queue_linked_list.hpp
src/: my_math.cpp  tests.cpp
